--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,9 @@
 <div class="form-container">
   <form style="display: flex; flex-direction : column; width: 25%;" method="post" action="/user/login">
     <h1 class="title" style="text-align: center; ">LOGIN</h1>
-    <input class="input" type="text" name="username" placeholder="username">
+    <input required class="input" type="text" name="username" placeholder="username">
     <input class="input" type="password" name="password" placeholder="password">
-    <input style="width: fit-content; align-self: center;" class="btn" type="submit" value="login">
+    <input style="width: fit-content; align-self: center; font-size: x-large;" class="btn" type="submit" value="Login">
     <%- include("partials/authError.ejs") %>
     <a style=" margin-top: 20px; text-align: center;" href="/user/forgot-password">Forgot Password?</a>
     <a style=" margin-top: 20px; text-align: center;" href="/user/signup">signup</a>
