--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -1,10 +1,11 @@
 <link rel="stylesheet" href="/style.css">
-<body>
+<body style="background-color: gold;">
 <div class="form-container">
   <form style="display: flex; flex-direction : column; width: 25%;" method="post" action="/user/forgot-password">
     <h1 class="title" style="text-align: center; ">SEND RESET PASSWORD MAIL</h1>
     <input class="input" type="text" name="email" placeholder="email">
     <input style="width: fit-content; align-self: center;" class="btn" type="submit" value="Send">
+    <%- include("partials/authError.ejs") %>
   </form>
 </div>
 </body>
