--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -1,14 +1,18 @@
 <link rel="stylesheet" href="/style.css">
-<body>
-<div class="form-container">
-  <form style="display: flex; flex-direction : column; width: 25%;" method="post" action="/user/reset-password/<%= user %>">
-    <h1 class="title" style="text-align: center; ">RESET PASSWORD</h1>
-    <%console.log(user) %>
-    <input class="input" type="text" name="password" placeholder="new password">
-    <input class="input" type="password" name="confirmedPassword" placeholder="confirm password">
-    <%- include("partials/authError.ejs") %>
+<body style="background-color: gold;">
+  <!-- <% if(user) {%>
+    <button style="margin: 20px 0px 0px 20px;" class="btn" onclick="history.back()">Back</button>
+  <% } %> -->
 
-    <input style="width: fit-content; align-self: center;" class="btn" type="submit" value="Reset">
-  </form>
-</div>
+  <div class="form-container">
+    <form style="display: flex; flex-direction : column; width: 25%;" method="post" action="/user/reset-password/<%= user %>">
+      <h1 class="title" style="text-align: center; ">RESET PASSWORD</h1>
+      <%console.log(user) %>
+      <input class="input" type="text" name="password" placeholder="new password">
+      <input class="input" type="password" name="confirmedPassword" placeholder="confirm password">
+      <%- include("partials/authError.ejs") %>
+
+      <input style="width: fit-content; align-self: center;" class="btn" type="submit" value="Reset">
+    </form>
+  </div>
 </body>
