--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 .title{
-  color : rgb(129, 12, 104);
+  color : rgb(26, 24, 136);
 }
 
 p{
@@ -39,7 +39,7 @@ p{
 .btn{
   font-size: 18px;
   margin-top: 30px;
-  background-color: rgb(136, 24, 136);
+  background-color: rgb(49, 22, 148);
   border: none;
   padding: 10px;
   color: white;
@@ -58,7 +58,7 @@ p{
 }
 
 .form-container{
-  padding: 10% 0;
+  padding: 5% 0;
   display: flex;
 justify-content: center;
 }
@@ -66,7 +66,7 @@ justify-content: center;
 ul {
   list-style-type: none;
   padding: 0;
-  background-color: rgba(125, 31, 136, 0.349);
+  background-color: gold;
   overflow: hidden;
   /* position: fixed; */
   top: 0;
@@ -100,15 +100,31 @@ li a:hover {
 }
 
 #productsContainer{
-  width: fit-content;
+  width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .icon{
   width: 40px;
 }
 
+.col-4{
+  flex-basis: 20%;
+  padding: 10px;
+  min-width: 200px;
+  margin-bottom: 50px;
+}
 
+.col-4 img{
+  width: 10%;
+  height: 200px;
+}
 
+.col-4 input{
+  font-size: small;
+}
 
 
 .action {
